# copilot-router

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: release.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/auth/: jetbrains.rs  mod.rs  oauth.rs  refresher.rs  vscode.rs
src-tauri/src/proxy/: anthropic.rs  mod.rs  openai.rs  server.rs
src-tauri/src/usage/: mod.rs  tracker.rs
src/components/: Layout.tsx  StatusBar.tsx
src/lib/: tauri.ts  utils.ts
src/pages/: Dashboard.tsx  Logs.tsx  ModelMappings.tsx  Settings.tsx
