[package]
name = "copilot-router"
version = "1.0.0"
description = "GitHub Copilot to OpenAI/Anthropic API Router"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "copilot_router_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-store = "2.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.7", features = ["json", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async streams (SSE forwarding)
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
bytes = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
http-body-util = "0.1"
tauri-plugin-clipboard-manager = "2.3.2"
arboard = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
